@@ -5,8 +5,10 @@ NEXT RELEASE
  - Rename the extends definition property to augments.
  - Rename the isa definition property to type.
  - New primitive and object types for boolean, string, and number.
+ - Added the nonEmptyString type.
  - Rename the extends type to instanceOf.
  - Added the typeOf type.
+ - New attribute extention (o-attribute.js).
 
 0.0.3 : 2013-03-24
  - New types extension (o-types.js).
